inicio do desenvolvimento de serviços

--- a/emges.html
+++ b/emges.html
@@ -14,9 +14,9 @@
             <nav>
                 <p class="brand"><strong>EMGeS</strong></p>
                 <ul>
-                    <li><a href="#Início">Início</a></li>
-                    <li><a href="#Serviços">Serviços</a></li>
-                    <li><a href="#Planos">Planos</a></li>
+                    <li><a href="Início">Início</a></li>
+                    <li><a href="serviços.html">Serviços</a></li>
+                    <li><a href="Planos">Planos</a></li>
                     <button>Login</button>
                 </ul>
             </nav>
@@ -26,7 +26,7 @@
                     <h2>Engenharia de Manutenção, Gestão e Segurança</h2>
                     <p>A EMGeS é uma empresa formada por profissionais capacitados e dedicados para realizar serviços de Engenharia, atendendo todas as necessidades dos nossos clientes, seguindo padrões de segurança, normas e legislações.</p>
                 </div>
-                <img src="imagens/WhatsApp_Image_2023-07-12_at_21.35.50__1_-removebg-preview.png" alt="">
+                <img src="imagens/logo do site.webp" alt="">
             </div>
         </div>
     </header>
@@ -106,16 +106,7 @@
       <footer>
         <div class="main">
           <div class="content footer-links">
-            <div class="footer-company">
-              <h4>Serviços de Engenharia</h4>
-              <h6>Laudos Técnicos + ART's</h6>
-              <h6>Laudo Veícular</h6>
-            </div>
-            <div class="footer-rental">
-              <h4>Serviços de Segurança do Trabalho</h4>
-              <h6>Projetos Contra Incêndio</h6>
-              <h6>LTCA/PGR/PCMSO</h6>
-            </div>
+            
             <div class="footer-social">
               <h4>Permaneça Conectado</h4>
               <div class="social-icons">
